# circlesearch

./: README.md  pyproject.toml
.windsurf/rules/: workspace.md
circlesearch/: __init__.py  arrangement.py  circle.py  graph.py
notebooks/: demo.ipynb  graphs.ipynb
scripts/: solve_an_random_sampling.py
tests/: test_arrangement.py  test_circle.py
